syntax = "proto3";

package org.jscience.computing.remote;

option java_multiple_files = true;
option java_package = "org.jscience.computing.remote.grpc";
option java_outer_classname = "LinearAlgebraServiceProto";

service MatrixService {
  rpc MatrixMultiply (MatrixRequest) returns (MatrixResponse) {}
}

message MatrixRequest {
  MatrixData matrix_a = 1;
  MatrixData matrix_b = 2;
}

message MatrixResponse {
  MatrixData result = 1;
}

message MatrixData {
  int32 rows = 1;
  int32 cols = 2;
  repeated double data = 3; // Row-major order
}
